--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,12 @@
-nymea-remoteproxy (0.1.0) UNRELEASED; urgency=medium
+nymea-remoteproxy (0.1.2) UNRELEASED; urgency=medium
+
+  * Many bug fixes
+  * Add more scurity mechanisms
+  * Add monitor
+
+ -- Simon Stürz <simon.stuerz@guh.io>  Wed, 22 Aug 2018 16:55:07 +0200
+
+nymea-remoteproxy (0.1.0) xenial; urgency=medium
 
   * First working online version
 
