--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,10 @@
-nymea-remoteproxy (0.1.2) UNRELEASED; urgency=medium
+nymea-remoteproxy (0.1.3) bionic; urgency=medium
+
+  * Add native AWS lambda invoke code
+
+ -- Simon Stürz <simon.stuerz@guh.io>  Mon, 27 Aug 2018 13:31:18 +0200
+
+nymea-remoteproxy (0.1.2) bionic; urgency=medium
 
   * Many bug fixes
   * Add more scurity mechanisms
