--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nymea-remoteproxy (0.1.4) bionic; urgency=medium
+
+  * Implement server statistics and improve monitor
+
+ -- Simon Stürz <simon.stuerz@guh.io>  Tue, 04 Sep 2018 21:05:08 +0200
+
 nymea-remoteproxy (0.1.3) bionic; urgency=medium
 
   * Add native AWS lambda invoke code
