Update remote proxy version to 0.2.0

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,8 @@
+nymea-remoteproxy (0.2.0) UNRELEASED; urgency=medium
+
+
+ -- Simon Stürz <simon.stuerz@nymea.io>  Tue, 27 Jul 2021 11:50:52 +0200
+
 nymea-remoteproxy (0.1.14) xenial; urgency=medium
 
   [ Michael Zanetti ]
